<resources>
    <string name="app_name">FirstCode</string>
    <string name="show_toast">show_toast</string>
    <string name="remove">remove</string>
    <string name="add">add</string>
    <string name="finish_activity">finish_activity</string>
    <string name="intent_activity">intent_activity</string>
    <string name="intent_browser">intent_browser</string>
    <string name="intent_data">intent_data</string>
    <string name="intent_data_result">intent_data_result</string>
    <string name="to_normal_activity">to_normal_activity</string>
    <string name="to_dialog_activity">to_dialog_activity</string>
    <string name="lifecycle_activity">lifecycle_activity</string>
    <string name="launch_mode">launch_mode</string>
    <string name="standard">standard</string>
    <string name="singleTop">singleTop</string>
    <string name="singleTask">singleTask</string>
    <string name="singleInstance">singleInstance</string>
    <string name="intent">intent</string>
    <string name="this_is_textview">This is TextView</string>
    <string name="button">button</string>
    <string name="hint">Type something here</string>
    <string name="back">Back</string>
    <string name="title_text">Title Text</string>
    <string name="edit">Edit</string>
    <string name="list_view_activity">list_view_activity</string>
    <string name="recycler_view_activity">recycler_view_activity</string>
    <string name="chat_activity">chat_activity</string>
    <string name="send">send</string>
    <string name="this_is_static_fragment">this is static fragment</string>
    <string name="this_is_dynamic_fragment">this is dynamic fragment</string>
    <string name="add_fragment">add_fragment</string>
    <string name="lifecycle_fragment">lifecycle fragment</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="remove_fragment">remove fragment</string>
    <string name="news_activity">news activity</string>
    <string name="dynamic_register_broadcastReceiver">dynamic register BroadcastReceiver</string>
    <string name="send_broadcast">send broadcast</string>
    <string name="send_standard">send standard</string>
    <string name="send_ordered">send ordered</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="account">Account:</string>
    <string name="password">Password:</string>
    <string name="login">Login</string>
    <string name="send_force_online_broadcast">Send force online broadcast</string>
    <string name="login_success">login success</string>
    <string name="force_offline">force offline</string>
    <string name="file_storage">file storage</string>
    <string name="save_to_file">save to file</string>
    <string name="shared_preferences">shared preferences</string>
    <string name="put_to_sp">put to sp</string>
    <string name="get_from_sp">get from sp</string>
    <string name="input_save_content">input save content</string>
    <string name="please_type_password">please type password</string>
    <string name="please_type_account">please type account</string>
    <string name="remember_password">remember password</string>
    <string name="database">database</string>
    <string name="create_database">create database</string>
    <string name="insert_data">insert data</string>
    <string name="delete_data">delete data</string>
    <string name="update_data">update data</string>
    <string name="query_data">query data</string>
    <string name="insert_data_use_sql">insert data use sql</string>
    <string name="delete_data_use_sql">delete data use sql</string>
    <string name="update_data_use_sql">update data use sql</string>
    <string name="query_data_use_sql">query data use sql</string>
    <string name="use_transaction">use transaction</string>
    <string name="runtime_permission">runtime permission</string>
    <string name="make_call">make call</string>
    <string name="contact">contact</string>
    <string name="query_contact">query contact</string>
    <string name="notification">notification</string>
    <string name="send_notice">send notice</string>
    <string name="this_is_notification_layout">This is notification layout</string>
    <string name="send_notice_with_intent">send notice with intent</string>
    <string name="send_notice_with_cancel">send notice with cancel</string>
    <string name="send_notice_with_long_text">send notice with long text</string>
    <string name="send_notice_with_big_picture">send notice with big picture</string>
    <string name="send_notice_with_important">send notice with important</string>
    <string name="camera">camera</string>
    <string name="take_photo">take photo</string>
    <string name="pick_from_photo_album">pick from photo album</string>
    <string name="play_music">play music</string>
    <string name="play_video">play video</string>
    <string name="multimedia">multimedia</string>
    <string name="play">play</string>
    <string name="pause">pause</string>
    <string name="stop">stop</string>
    <string name="replay">replay</string>
    <string name="create_thread">create thread</string>
    <string name="handle_message">handle message</string>
    <string name="async_task">asyncTask</string>
    <string name="service">service</string>
    <string name="start_service">start service</string>
    <string name="stop_service">stop service</string>
    <string name="bind_service">bind service</string>
    <string name="unbind_service">unbind service</string>
    <string name="start_foreground">start foreground</string>
    <string name="stop_foreground">stop foreground</string>
    <string name="start_intent_service">start intent service</string>
    <string name="web_view">web view</string>
    <string name="network">network</string>
    <string name="httpURLConnection">httpURLConnection</string>
    <string name="okhttp">okhttp</string>
    <string name="parse">xml parse</string>
    <string name="xml_parse_with_pull">xml parse with pull</string>
    <string name="xml_parse_with_sax">xml parse with sax</string>
    <string name="xml_parse_with_dom">xml parse with dom</string>
    <string name="json_parse_with_jsonObject">json parse with jsonObject</string>
    <string name="json_parse_with_gson">json parse with gson</string>
    <string name="retrofit">retrofit</string>
    <string name="get_app_data">get app data</string>
    <string name="backup">BackUp</string>
    <string name="delete">delete</string>
    <string name="settings">settings</string>
    <string name="this_is_menu">This is menu</string>
    <string name="call">Call</string>
    <string name="friends">friends</string>
    <string name="location">location</string>
    <string name="mail">mail</string>
    <string name="task">task</string>
    <string name="material_design">material design</string>
    <string name="check">check</string>
    <string name="view_model">viewModel</string>
    <string name="plus_one">Plus One</string>
    <string name="clear_text">clear text</string>
    <string name="lifecycle">lifecycle</string>
    <string name="live_data">liveData</string>
    <string name="map">map</string>
    <string name="switchMap">switchMap</string>
    <string name="room">room</string>
    <string name="delete_all_data">delete all data</string>
    <string name="workManager">work manager</string>
    <string name="doWork">do work</string>
    <string name="cancelWork">cancel work</string>
    <string name="input_address_hint">输入地址</string>
    <string name="background">background</string>
    <string name="change_city">change city</string>
    <string name="delimiter">|</string>
</resources>