<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".chapter6.offline.LoginActivity">

    <TextView
        android:id="@+id/accountText"
        android:layout_width="96dp"
        android:layout_height="48dp"
        android:text="@string/account"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="center_vertical"
        android:textSize="@dimen/font_size_18"
        android:paddingStart="8dp"/>

    <EditText
        android:id="@+id/accountEdit"
        android:layout_width="0dp"
        android:layout_height="48dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/accountText"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/please_type_account"/>

    <TextView
        android:id="@+id/passwordText"
        android:layout_width="96dp"
        android:layout_height="48dp"
        app:layout_constraintTop_toBottomOf="@id/accountText"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/password"
        android:textSize="@dimen/font_size_18"
        android:gravity="center_vertical"
        android:paddingStart="8dp"
        android:layout_marginTop="16dp"/>

    <EditText
        android:id="@+id/passwordEdit"
        android:layout_width="0dp"
        android:layout_height="48dp"
        app:layout_constraintTop_toTopOf="@id/passwordText"
        app:layout_constraintStart_toEndOf="@id/passwordText"
        app:layout_constraintEnd_toEndOf="parent"
        android:inputType="textPassword"
        android:hint="@string/please_type_password"/>

    <CheckBox
        android:id="@+id/rememberPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remember_password"
        app:layout_constraintTop_toBottomOf="@id/passwordText"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="@dimen/font_size_18"
        android:textColor="@android:color/tertiary_text_light"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/login"
        android:layout_width="0dp"
        android:layout_height="48dp"
        app:layout_constraintTop_toBottomOf="@id/rememberPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/login"
        android:textAllCaps="false"
        android:layout_marginTop="16dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>