<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/title_bg">

    <Button
        android:id="@+id/titleBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/back_bg"
        android:layout_gravity="center"
        android:layout_margin="4dp"
        android:text="@string/back"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        app:backgroundTint="@null"/>

    <TextView
        android:id="@+id/titleText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/title_text"
        android:textSize="@dimen/font_size_24"
        android:textColor="@android:color/white"/>

    <Button
        android:id="@+id/titleEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="4dp"
        android:background="@drawable/edit_bg"
        android:text="@string/edit"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        app:backgroundTint="@null"/>
</LinearLayout>