<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".chapter10.service.ServiceActivity">

    <Button
        android:id="@+id/startService"
        android:layout_width="0dp"
        android:layout_height="@dimen/view_height_48"
        android:text="@string/start_service"
        android:textAllCaps="false"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/stopService"
        android:layout_width="0dp"
        android:layout_height="@dimen/view_height_48"
        android:text="@string/stop_service"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/startService"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/bindService"
        android:layout_width="0dp"
        android:layout_height="@dimen/view_height_48"
        android:text="@string/bind_service"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/stopService"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/unbindService"
        android:layout_width="0dp"
        android:layout_height="@dimen/view_height_48"
        android:textAllCaps="false"
        android:text="@string/unbind_service"
        app:layout_constraintTop_toBottomOf="@id/bindService"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/foreground"
        android:layout_width="0dp"
        android:layout_height="@dimen/view_height_48"
        android:textAllCaps="false"
        android:text="@string/foreground"
        app:layout_constraintTop_toBottomOf="@id/unbindService"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>