<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".chapter7.DataStoragePracticeActivity">

    <Button
        android:id="@+id/file_storage"
        android:layout_width="0dp"
        android:layout_height="48dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/file_storage"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/shared_preferences"
        android:layout_width="0dp"
        android:layout_height="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/file_storage"
        android:text="@string/shared_preferences"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/database"
        android:layout_width="0dp"
        android:layout_height="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/shared_preferences"
        android:text="@string/database"
        android:textAllCaps="false"/>
</androidx.constraintlayout.widget.ConstraintLayout>