<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".chapter6.BroadcastReceiverPracticeActivity">

    <Button
        android:id="@+id/dynamicRegisterBroadcastReceiver"
        android:layout_width="0dp"
        android:layout_height="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/dynamic_register_broadcastReceiver"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/sendBroadcast"
        android:layout_width="0dp"
        android:layout_height="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dynamicRegisterBroadcastReceiver"
        android:text="@string/send_broadcast"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/forceOffline"
        android:layout_width="0dp"
        android:layout_height="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sendBroadcast"
        android:text="@string/force_offline"
        android:textAllCaps="false"/>
</androidx.constraintlayout.widget.ConstraintLayout>