<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".chapter9.multimedia.PlayVideoActivity">

    <Button
        android:id="@+id/play"
        android:layout_width="0dp"
        android:layout_height="@dimen/view_height_48"
        android:text="@string/play"
        android:textAllCaps="false"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/pause"
        android:layout_width="0dp"
        android:layout_height="@dimen/view_height_48"
        android:text="@string/pause"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/play"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/replay"
        android:layout_width="0dp"
        android:layout_height="@dimen/view_height_48"
        android:text="@string/replay"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/pause"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <VideoView
        android:id="@+id/videoView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/replay"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>